--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -318,23 +318,30 @@ form button:hover {
 }
 
 .form-group {
-    margin-bottom: 15px;
+    margin-bottom: 20px;
 }
 
-.form-group label {
+label {
     display: block;
-    margin-bottom: 4px;
+    margin-bottom: 10px;
     font-weight: bold;
-    color: #555;
 }
 
-#futsal_name {
-    width: 100%; /* Makes the dropdown wider */
-    height: 50px; /* Increases height */
-    font-size: 18px; /* Increases font size */
-    padding: 5px; /* Adds padding for better appearance */
+select {
+    width: 100%;
+    padding: 10px;
+    font-size: 16px;
+    border: 1px solid #ccc;
+    border-radius: 5px;
+    background-color: #fff;
+    cursor: pointer;
 }
 
+select:focus {
+    border-color: #007bff;
+    outline: none;
+    box-shadow: 0 0 5px rgba(0, 123, 255, 0.5);
+}
 .form-group input {
     width: 100%;
     padding: 10px;
